Improve JSON editing support on admin config page
Old page provided complex JSON objects as text in a single line text
input. It had verification for when you stuffed up, but essentially you
had to copy-paste out, reformat, edit, reformat and paste back in.
v1.0 funtional

New version magically opens large strings such as JSON stuff out to a
multiline box. JSON is indented before you get to it, life is better.

Life has additional complications because contenteditable is a hairy
mess. Looks sweet though.

--- a/zk/public/admin/change_config.html
+++ b/zk/public/admin/change_config.html
@@ -6,13 +6,26 @@
 	background: none;
 	margin: 0 1px; /* Compensates for border none */
 }
+.hidden-input:not(:hover):not(:focus) {
+	/* Hide excess text until somebody shows an interest */
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.hidden-input:hover, .hidden-input:focus {
+	/* Display JSON content nicely - multiline & show whitespace */
+	height: auto;
+	white-space: pre-wrap;
+}
 </style>
 
-<table class="table table-striped">
+<table class="table table-striped" style="table-layout:fixed">
 	<!-- Specify width preference, prevents jumping when showing description. -->
+	<!-- Fixed width on cols allows table-layout=fixed, which keeps contenteditable in line -->
+	<!-- TODO: Remove fixed (px) values off column, find another way to fix layout -->
 	<colgroup>
-		<col></col>
-		<col></col>
+		<col width="60px"></col>
+		<col width="165px"></col>
 		<col style="width: 100%"></col>
 	</colgroup>
 	<tr>
@@ -20,12 +33,13 @@
 		<th>Key</th>
 		<th>Value</th>
 	</tr>
+	<tr ng-if="!contentLoaded"><td colspan="3"><b>Loading...</b></td></tr>
 	<tr ng-repeat-start="row in data">
 		<td>{{ row.category }}</td>
 		<td>{{ row.key }}</td>
 		<td>
 			<div class="has-feedback">
-				<input class="form-control hidden-input" ng-focus="row.show_description=1" ng-blur="row.show_description=0" ng-model="row.value" json-text ng-model-options="{ updateOn: 'default blur', debounce: {'default': 1000, 'blur': 0} }">
+				<span contenteditable content-editable json-text class="form-control hidden-input" ng-focus="row.show_description=1" ng-blur="row.show_description=0" ng-model="row.value" ng-model-options="{ updateOn: 'default blur', debounce: {'default': 1000, 'blur': 0} }">{{row.value}}</span>
 				<span ng-class="{'glyphicon glyphicon-ok':row.response=='success', 'glyphicon glyphicon-remove':row.response=='error'}" class="form-control-feedback"></span>
 			</div>
 		</td>
